update background image

--- a/index.html
+++ b/index.html
@@ -6,26 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Rock Paper Scissors</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/rps.png">
 </head>
 
 <body>
 
-
-
+    <!-- <div class="box-con">
+        <div class="box">adsasd</div>
+    </div> -->
 
     <div class="container">
-        <div class="area-komputer">
-            <h2>Computer</h2>
-            <h2 class="computer-score">0</h2>
+        <div class="area-komputer area">
+            <h2>Computer: <span class="computer-score">0</span></h2>
+            <!-- <h2 class="computer-score">0</h2> -->
             <img src="img/rock.jpg" class="img-computer">
         </div>
 
         <div class="info"></div>
 
-        <div class="area-player">
-            <h2>You</h2>
-            <h2 class="player-score">0</h2>
+        <div class="area-player area">
+            <h2>You: <span class="player-score">0</span></h2>
+            <!-- <h2 class="player-score">0</h2> -->
             <ul>
                 <li>
                     <img src="img/rock.jpg" class="rock">
